MediaStreamTrack::GetConstraints() returns {mediaSource: "camera"} for all tracks where it should be empty
Categories
(Core :: WebRTC: Audio/Video, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | fixed |
People
(Reporter: pehrsons, Assigned: pehrsons)
References
Details
Attachments
(1 file)
STR:
Create a track that doesn't have constraints: e.g., a received track from a peer connection, a track from a WebAudio MediaStreamAudioDestinationNode, a CanvasCaptureMediaStream track.
Log the result from calling getConstraints() on the track
Expected: {}
Actual: {mediaSource: "camera"}
Comment 1•6 years ago
|
||
Long story, but it's a mutually exclusive constraint.
Comment 2•6 years ago
|
||
The model here violates constraints a bit.
Constraints traditionally all constrain on a single pool.
Except we allow default values, which then effectively makes it a switcher between different pools.
Basically this is only used in MediaManager, so we should remove the default, and insert it where it's still needed in MediaManager.
We can do that now if we care terribly, or we can wait for bug 1557174 to rip out mediaSource.
| Assignee | ||
Comment 3•6 years ago
|
||
That sounds simple enough, especially given that there's no clear timeline for bug 1557174.
| Assignee | ||
Comment 4•6 years ago
|
||
Comment 6•6 years ago
|
||
| bugherder | ||
Description
•