Bug 1560907 - Remove default value for mediaSource constraint. r=jib,smaug

Differential Revision: https://phabricator.services.mozilla.com/D36087